--- a/src/main/resources/static/css/CarManage.css
+++ b/src/main/resources/static/css/CarManage.css
@@ -1,4 +1,8 @@
 /* CSS Document */
+body{
+    font-family: "微软雅黑";
+	font-size:17px;
+}
 .div-item{
  margin:0px 35px;
  border-bottom:1px solid #A8A8A8;
@@ -47,7 +51,6 @@
 }
 
 .ItemTitle{
-	font-size:20px;
-	font-weight:bold;
+	font-size:21px;
 	color:black;
 	}
