--- a/src/main/resources/static/css/PersonalInfo.css
+++ b/src/main/resources/static/css/PersonalInfo.css
@@ -1,9 +1,14 @@
-﻿#userimge {
-    width: 50px;
-    height: 50px;
-    border-radius: 50px;
-    -moz-border-radius: 50px;
-    -webkit-border-radius: 50px;
+﻿body{
+    font-family: "微软雅黑";
+    width: 100%;
+	font-size:17px;
+}
+#userimge {
+    width: 52px;
+    height: 52px;
+    border-radius: 52px;
+    -moz-border-radius: 52px;
+    -webkit-border-radius: 52px;
     vertical-align: middle;
 }
 .ItemRight 
@@ -16,4 +21,7 @@
     vertical-align: middle;
     height: 100%;
     display: inline-block;
+}
+.ItemLeft{
+	font-size:21px;
 }
