--- a/src/main/resources/static/css/PositionHistory.css
+++ b/src/main/resources/static/css/PositionHistory.css
@@ -1,51 +1,64 @@
 ﻿* {
     margin: 0px;
     padding: 0px;
-	
+	font-family: "微软雅黑";
+   
+}
+body{
+     width: 100%;
 }
 #div-PlayHistory {
-    width: 1280px;
-    height: 180px;
+    width: 800px;
+    height: 200px;
     position: fixed;
+	font-size:13px;
     background-color: white;
     opacity: 0.9;
     -moz-opacity: 0.9;
+
     z-index: 1000;
 }
 
 
 #div-info 
-{
-    padding-left: 30px;
-    width: 589px;
-    height: 180px;
+{	padding-top:10px;
+    padding-left: 10px;
+    width: 349px;
+    height: 190px;
     float: left;
    border-right: 1px solid #A8A8A8;
 }
 #div-info-top 
 {
     width: 100%;
-    height: 120px;
+    height: 115px;
+	margin-top:15px;
    vertical-align: top;
 }
 #div-info-bottom {
     width: 100%;
-    height: 60px;
+	margin-top:5px;
+    height: 40px;
     vertical-align: top;
 }
 #div-info-top>span {
-    height: 120px;
-
+    height: 115px;
+	overflow:hidden;
+}
+#div-info-bottom>span{
+	height:40px;
+	overflow:hidden;
 }
 #div-info>div>span {
     margin: 0px 10px;
-    line-height: 30px;
+    line-height: 19px;
     display: inline-block;
 }
 
 #div-play {
-    width: 200px;
-    height: 180px;
+		padding-top:10px;
+    width: 130px;
+    height: 190px;
     float: left;
     vertical-align: middle;
     text-align: center;
@@ -57,7 +70,7 @@
 }
 select,input {
     border: 1px solid #A8A8A8;
-    width: 250px;
+    width: 180px;
     height: 30px;
     font-size: 18px;
     line-height: 30px;
@@ -66,10 +79,11 @@ select,input {
 
 #div-choice 
 {
+		padding-top:10px;
     float: left;
-    width: 409px;
-    height: 180px;
-    margin-left: 30px;
+    width: 294px;
+    height: 190px;
+    margin-left: 15px;
     border-right: 1px solid #A8A8A8;
     
 }
@@ -79,11 +93,11 @@ select,input {
     width: 100%;
 }
 #div-choice>div>span {
-    margin:0px 10px;
+    margin:0px 5px;
 }
 
 .itemtitle {
-    font-size: 22px;
+    font-size: 18px;
    
 }
 
