--- a/src/main/resources/templates/CarManage.html
+++ b/src/main/resources/templates/CarManage.html
@@ -1,67 +1,52 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>天目-车辆管理</title>
-<link th:href="@{/CSS/EditGuard.css}" rel="stylesheet" type="text/css" />
-<link th:href="@{/CSS/PersonalInfo.css}" rel="stylesheet"
-	type="text/css" />
-<link th:href="@{/CSS/CarManage.css}" rel="stylesheet" type="text/css" />
+<link href="CSS/EditGuard.css" rel="stylesheet" type="text/css" />
+<link href="CSS/PersonalInfo.css" rel="stylesheet" type="text/css" />
+<link href="CSS/CarManage.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-	<div id="div-left">
-		<a class="backBtn" href="AddCar.html"><img width="37px"
-			height="37px" th:src="@{/IMAGES/add.png}" /></a>
-	</div>
-	<div id="div-right">
-		<div class="div-item">
-			<div class="div-1">
-				<div class="ItemTitle">法拉利一号</div>
-				<div>1234567890</div>
-			</div>
-			<div class="div-2">
-				<div style="">
-					<div>状态：已失效 已断电</div>
-					<div>位置：浙江省杭州市江干区就包三餐西园1506号</div>
-				</div>
-			</div>
-			<div class="div-3">
-				<div>速度：15km/h</div>
-				<div>当日里程：20km</div>
-				<div>总里程：180km</div>
-			</div>
-			<div class="div-4">
-				<span></span> <a><img th:src="@{/images/edit.png}" /></a> <a><img
-					th:src="@{images/battery-red.png}" /></a> <a><img
-					th:src="@{/images/restart.png}" /></a> <a><img
-					src="images/delete.png" /></a>
-			</div>
-		</div>
-		<div class="div-item">
-			<div class="div-1">
-				<div class="ItemTitle">法拉利二号</div>
-				<div>1234567890</div>
-			</div>
-			<div class="div-2">
-				<div style="">
-					<div>状态：已失效 已断电</div>
-					<div>位置：浙江省杭州市江干区就包三餐西园1506号</div>
-				</div>
-			</div>
-			<div class="div-3">
-				<div>速度：15km/h</div>
-				<div>当日里程：20km</div>
-				<div>总里程：180km</div>
-			</div>
-			<div class="div-4">
-				<span></span> <a><img th:src="@{/images/edit.png}" /></a> <a><img
-					th:src="@{/images/battery-red.png}" /></a> <a><img
-					th:src="@{/images/restart.png}" /></a> <a><img
-					th:src="@{images/delete.png}" /></a>
-			</div>
-		</div>
-	</div>
+<div id="div-left"> <a class="backBtn" href="AddCar.html"><img width="37px" height="37px" src="IMAGES/add.png"/></a> </div>
+<div id="div-right">
+  <div class="div-item">
+    <div class="div-1">
+      <div class="ItemTitle"> 法拉利一号 </div>
+      <div>1234567890</div>
+    </div>
+    <div class="div-2">
+      <div style="">
+        <div>状态：已失效 已断电</div>
+        <div>位置：浙江省杭州市江干区就包三餐西园1506号</div>
+      </div>
+    </div>
+    <div class="div-3">
+      <div>速度：15km/h</div>
+      <div>当日里程：20km</div>
+      <div>总里程：180km</div>
+    </div>
+    <div class="div-4"> <span></span> <a><img src="images/edit.png" /></a> <a><img src="images/battery-red.png" /></a> <a><img src="images/restart.png" /></a> <a><img src="images/delete.png" /></a> </div>
+  </div>
+  <div class="div-item">
+    <div class="div-1">
+      <div class="ItemTitle"> 法拉利二号 </div>
+      <div>1234567890</div>
+    </div>
+    <div class="div-2">
+      <div style="">
+        <div>状态：已失效 已断电</div>
+        <div>位置：浙江省杭州市江干区就包三餐西园1506号</div>
+      </div>
+    </div>
+    <div class="div-3">
+      <div>速度：15km/h</div>
+      <div>当日里程：20km</div>
+      <div>总里程：180km</div>
+    </div>
+    <div class="div-4"> <span></span> <a><img src="images/edit.png" /></a> <a><img src="images/battery-red.png" /></a> <a><img src="images/restart.png" /></a> <a><img src="images/delete.png" /></a> </div>
+  </div>
+</div>
 </body>
 </html>
