--- a/src/main/resources/templates/SetGuard.html
+++ b/src/main/resources/templates/SetGuard.html
@@ -1,40 +1,23 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+	xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>车辆设防</title>
 <script th:src="@{/JS/jquery-1.11.1.min.js}" type="text/javascript"></script>
-<link th:href="@{/CSS/jquery.switch.css}" rel="stylesheet" type="text/css" />
-    <script th:src="@{/JS/jquery.switch.js}" type="text/javascript"></script>
-    <link th:href="@{/CSS/SetGuard.css}" rel="stylesheet" type="text/css" />
+<link th:href="@{/CSS/jquery.switch.css}" rel="stylesheet"
+	type="text/css" />
+<script th:src="@{/JS/jquery.switch.js}" type="text/javascript"></script>
+<link th:href="@{/CSS/SetGuard.css}" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-<form>
-        <div id="GuardContiner">
-        </div>
-    </form>
-   <script th:src="@{/js/system/guard.js}"></script>
-  <script>
-      $(function() {
-          var btn = $("#car1").SwitchButton();
-		  btn.click(function(){
-			  alert($(this).val());
-			  });
-          $("#car2").SwitchButton();
-          $("#car3").SwitchButton();
-
-          $(".ItemLeft").click(function() {
-              location.href = "EditGuard.html";
-          });
-      });
-
-      $("#getValue").click(function() {
-          alert($("input[type=checkbox]").prop("checked"));
-      });
-       
-     
-    </script>
+	<form>
+		<div id="GuardContiner">
+			
+		</div>
+	</form>
+	
+	<script th:src="@{/js/system/guard.js}"></script>
 </body>
 </html>
