--- a/src/main/resources/templates/SetGuard.html
+++ b/src/main/resources/templates/SetGuard.html
@@ -4,11 +4,11 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>车辆设防</title>
-<script th:src="@{/JS/jquery-1.11.1.min.js}" type="text/javascript"></script>
-<link th:href="@{/CSS/jquery.switch.css}" rel="stylesheet"
+<script th:src="@{/js/jquery-1.11.1.min.js}" type="text/javascript"></script>
+<link th:href="@{/css/jquery.switch.css}" rel="stylesheet"
 	type="text/css" />
-<script th:src="@{/JS/jquery.switch.js}" type="text/javascript"></script>
-<link th:href="@{/CSS/SetGuard.css}" rel="stylesheet" type="text/css" />
+<script th:src="@{/js/jquery.switch.js}" type="text/javascript"></script>
+<link th:href="@{/css/SetGuard.css}" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
