--- a/src/main/resources/templates/EditGuard.html
+++ b/src/main/resources/templates/EditGuard.html
@@ -4,19 +4,20 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>车辆设防-编辑</title>
-<link th:href="@{/CSS/EditGuard.css}" rel="stylesheet" type="text/css" />
-<link href="@{/CSS/jquery.switch.css}" rel="stylesheet" type="text/css" />
-<script src="@{/JS/jquery-1.11.1.min.js}" type="text/javascript"></script>
-<script src="@{/JS/jquery.switch.js}" type="text/javascript"></script>
-<script th:src="@{js/jy.main.js}"></script>
+<link th:href="@{/css/EditGuard.css}" rel="stylesheet" type="text/css" />
+<link th:href="@{/css/jquery.switch.css}" rel="stylesheet"
+	type="text/css" />
+<script th:src="@{/js/jquery-1.11.1.min.js}" type="text/javascript"></script>
+<script th:src="@{/js/jquery.switch.js}" type="text/javascript"></script>
 </head>
 
 <body>
-    
+
 	<div id="div-left">
 		<a class="backBtn" th:href="@{/backstage/setGuard}"><img
 			th:src="@{/images/back.png}" alt="返回" /></a>
 	</div>
+	<input type="hidden" id="sn" th:value="${sn}" />
 	<div id="div-right">
 		<div class="GuardItem">
 			<div class="ItemLeft">绑定报警号码</div>
@@ -25,19 +26,20 @@
 		<div class="GuardItem">
 			<div class="ItemLeft">震动报警</div>
 			<div class="ItemRight checkbox-mid">
-				<input type="checkbox" id="zdbj" checked="checked" />
+				<input type="checkbox" id="zdbj" th:checked="${shockalert}=='Y'" />
 			</div>
 		</div>
 		<div class="GuardItem">
 			<div class="ItemLeft">剪线报警</div>
 			<div class="ItemRight checkbox-mid">
-				<input type="checkbox" id="jxbj" checked="checked" />
+				<input type="checkbox" id="jxbj"
+					th:checked="${cuttinglinealert}=='Y'" />
 			</div>
 		</div>
 		<div class="GuardItem">
 			<div class="ItemLeft">自动设防</div>
 			<div class="ItemRight checkbox-mid">
-				<input type="checkbox" id="zdsf" checked="checked" />
+				<input type="checkbox" id="zdsf" th:checked="${autoalert}=='Y'" />
 			</div>
 		</div>
 	</div>
@@ -49,13 +51,50 @@
 			wd = ((wd - 800) > 0 ? wd : 800);
 			$("#div-right").width(wd);
 
-			$("#zdbj").SwitchButton();
-			$("#jxbj").SwitchButton();
-			$("#zdsf").SwitchButton();
+			$("#zdbj").SwitchButton().click(function() {
+				changeStatus($(this), "zdbj");
+			});
+			$("#jxbj").SwitchButton().click(function() {
+				changeStatus($(this), "jxbj");
+			});
+			$("#zdsf").SwitchButton().click(function() {
+				changeStatus($(this), "zdsf");
+			});
 		});
 
 		$(".FuncMenu li").removeClass("menuActive");
 		$("#SetGuard").addClass("menuActive");
+
+		function changeStatus(status, id) {
+			alert(status.val() + "," + $('#sn').val());
+			var fieldName = '';
+			if (id == 'zdbj') {
+				fieldName = 'shockalert';
+			} else if (id == 'jxbj') {
+				fieldName = 'cuttinglinealert';
+			} else if (id == 'zdsf') {
+				fieldName = 'autoalert';
+			}
+
+			$.ajax({
+				type : 'POST',
+				url : '/backstage/changeStatus',
+				data : {
+					'status' : status ? 'Y' : 'N',
+					'sn' : $('#sn').val(),
+					'fieldName' : fieldName
+				},
+				dataType : 'json',
+				success : function(data, textStatus) {
+					var result = data.result;
+					if ("success" != result) { // 如果登录不成功，则再次刷新验证码
+						alert(result);
+					} else {
+						window.location.href = "/backstage/setGuard";
+					}
+				}
+			});
+		}
 	</script>
 </body>
 </html>
