--- a/src/main/resources/templates/editCar.html
+++ b/src/main/resources/templates/editCar.html
@@ -3,7 +3,7 @@
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>添加设备</title>
+<title>修改设备</title>
 <script th:src="@{/js/jquery-1.11.1.min.js}" type="text/javascript"></script>
 <link th:href="@{/css/EditGuard.css}" rel="stylesheet" type="text/css" />
 <link th:href="@{/css/PersonalInfo.css}" rel="stylesheet"
@@ -22,7 +22,7 @@ input {
 		<a class="backBtn" th:href="@{/backstage/carManage}">
 			<img width="30px" height="36px" th:src="@{/images/back.png}" />
 		</a> 
-		<a class="backBtn" href="#" th:onclick="'saveCar('+${car.sn}+')'">
+		<a class="backBtn" href="#" th:onclick="'saveCar('+${car.sn}+')'"> 
 			<img width="35px" height="35px" th:src="@{/images/save.png}" />
 		</a>
 	</div>
@@ -30,20 +30,19 @@ input {
 		<div class="GuardItem">
 			<div class="ItemLeft">车辆名称</div>
 			<div class="ItemRight">
-				<span></span><input type="text" value="法拉利一号" />
+				<span></span><input id="carName" type="text" th:value="${car.name}" />
 			</div>
 		</div>
 		<div class="GuardItem">
 			<div class="ItemLeft">设备码</div>
 			<div class="ItemRight">
-				<span></span><input type="text" value="8211111111" />
+				<span></span><input type="text" disabled="disabled" th:value="${car.sn}" />
 			</div>
 		</div>
 
 	</div>
 
 </body>
-
 <script>
 		function saveCar(sn){
 			
@@ -56,10 +55,11 @@ input {
 			
 			$.ajax({
 				type : 'POST',
-				url : '/backstage/saveCar',
+				url : '/backstage/changeStatus',
 				data : {
-					'name' :carName,
-					'sn' : sn
+					'status' :carName,
+					'sn' : sn,
+					'fieldName' : 'name'
 				},
 				dataType : 'json',
 				success : function(data, textStatus) {
