Revert: 修改设防状态的时候   往message_queue 表里插入数据

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,9 +38,9 @@
            </div>
            <div id="SettingInfo">
                <ul class="FuncMenu">
-                   <li class="menuNormal" id="PersonalInfo"><span class="Span-left"><img src="/images/info-g.png" alt="info"/>个人资料</span><span class="Span-right">></span></li>
-                   <li class="menuNormal" id="MessageInfo"><span class="Span-left"><img src="/images/msg-g.png" alt="msg" />消息推送</span><span class="Span-right">></span></li>
-                   <li class="menuNormal" id="AboutUs"><span class="Span-left"><img src="/images/about-g.png" alt="about" />关于我们</span><span class="Span-right">></span></li>
+                   <li class="menuNormal" id="/backstage/personalInfo"><span class="Span-left"><img src="/images/info-g.png" alt="info"/>个人资料</span><span class="Span-right">></span></li>
+                   <li class="menuNormal" id="/backstage/messageInfo"><span class="Span-left"><img src="/images/msg-g.png" alt="msg" />消息推送</span><span class="Span-right">></span></li>
+                   <li class="menuNormal" id="/backstage/aboutUs"><span class="Span-left"><img src="/images/about-g.png" alt="about" />关于我们</span><span class="Span-right">></span></li>
                </ul>
            </div>
            <div id="exitbtn">
