--- a/src/main/resources/templates/AddCar.html
+++ b/src/main/resources/templates/AddCar.html
@@ -22,7 +22,7 @@ input {
 		<a class="backBtn" th:href="@{/backstage/carManage}">
 			<img width="30px" height="36px" th:src="@{/images/back.png}" />
 		</a> 
-		<a class="backBtn" href="#" th:onclick="'saveCar('+${car.sn}+')'">
+		<a class="backBtn" href="#" th:onclick="'saveCar()'">
 			<img width="35px" height="35px" th:src="@{/images/save.png}" />
 		</a>
 	</div>
@@ -30,13 +30,13 @@ input {
 		<div class="GuardItem">
 			<div class="ItemLeft">车辆名称</div>
 			<div class="ItemRight">
-				<span></span><input type="text" value="法拉利一号" />
+				<span></span><input id="carName" type="text" value="" />
 			</div>
 		</div>
 		<div class="GuardItem">
 			<div class="ItemLeft">设备码</div>
 			<div class="ItemRight">
-				<span></span><input type="text" value="8211111111" />
+				<span></span><input id="carSN" type="text" value="" />
 			</div>
 		</div>
 
@@ -45,12 +45,16 @@ input {
 </body>
 
 <script>
-		function saveCar(sn){
+		function saveCar(){
 			
 			var carName =$.trim($("#carName").val());
-			
+			var carSN =$.trim($("#carSN").val());
+
 			if(carName==''){
 				alert('名字不能为空');
+				return;
+			}else if(carSN==''){
+				alert('设备码不能为空');
 				return;
 			}
 			
@@ -59,13 +63,13 @@ input {
 				url : '/backstage/saveCar',
 				data : {
 					'name' :carName,
-					'sn' : sn
+					'sn' : carSN
 				},
 				dataType : 'json',
 				success : function(data, textStatus) {
 					var result = data.result;
 					if ("success" != result) { // 如果登录不成功，则再次刷新验证码
-						alert(result);
+						alert(data.msg);
 					} else {
 						window.location.href = "/backstage/carManage";
 					}
