--- a/src/main/resources/templates/EditPersonalInfo.html
+++ b/src/main/resources/templates/EditPersonalInfo.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
+
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>个人资料编辑</title>
- <link href="CSS/EditGuard.css" rel="stylesheet" type="text/css" />
-    <link href="CSS/PersonalInfo.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" th:href="@{/css/EditGuard.css}" />
+    <link rel="stylesheet" th:href="@{/css/PersonalInfo.css}" />
+
     <style>
 	input{
 		vertical-align:middle;	
@@ -15,8 +18,8 @@
 <body>
 
 <div id="div-left">
-<a class="backBtn" href="PersonalInfo.html"><img width="30px" height="36px" src="IMAGES/back.png"/></a>
-<a class="backBtn" href=""><img width="35px" height="35px" src="IMAGES/save.png"/></a>
+<a class="backBtn" href="/backstage/personalInfo"><img width="30px" height="36px" src="/IMAGES/back.png"/></a>
+<a class="backBtn" href="#" th:onclick="'save()'" ><img width="35px" height="35px" src="/IMAGES/save.png"/></a>
 </div>
     <div id="div-right">
         <div class="GuardItem">
@@ -24,7 +27,7 @@
                 昵称
             </div>
             <div class="ItemRight">
-               <span></span><input type="text"  value="法拉利一号" />
+               <span></span><input id="nickname" type="text" th:value="${user.nickname}" />
             </div>
         </div>
         <div class="GuardItem">
@@ -32,7 +35,7 @@
                 手机号
             </div>
             <div class="ItemRight">
-              <span></span><input type="text"   value="18211111111"/>
+              <span></span><input id="telephone" type="text" th:value="${user.telephone}" />
             </div>
         </div>
         <div class="GuardItem">
@@ -40,11 +43,48 @@
                 上传头像
             </div>
             <div class="ItemRight">
-                <span></span><input type="file"  accept="image/x-png,image/jpeg"/><img id="userimge" src="IMAGES/huge.jpg"/>
+                <span></span><input type="file"  accept="/image/x-png,image/jpeg"/><img id="userimge" src="/IMAGES/huge.jpg"/>
             </div>
         </div>
     </div>
     
 
 </body>
+
+
+<script>
+    function save(){
+
+        var nickname =$.trim($("#nickname").val());
+        var telephone =$.trim($("#telephone").val());
+
+        if(nickname==''){
+            alert('昵称不能为空');
+            return;
+        }else if(telephone==''){
+            alert('电话号码不能为空');
+            return;
+        }
+
+        $.ajax({
+            type : 'POST',
+            url : '/backstage/saveUserInfo',
+            data : {
+                'nickname' :nickname,
+                'telephone' : telephone
+            },
+            dataType : 'json',
+            success : function(data, textStatus) {
+                var result = data.result;
+                if ("success" != result) { //
+                    alert(data.msg);
+                } else {
+                    window.location.href = "/backstage/personalInfo";
+                }
+            }
+        });
+    }
+
+
+</script>
 </html>
