--- a/src/main/resources/templates/EditPersonalInfo.html
+++ b/src/main/resources/templates/EditPersonalInfo.html
@@ -5,6 +5,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>个人资料编辑</title>
+    <script th:src="@{/js/jquery-1.11.1.min.js}" type="text/javascript"></script>
     <link rel="stylesheet" th:href="@{/css/EditGuard.css}" />
     <link rel="stylesheet" th:href="@{/css/PersonalInfo.css}" />
 
