--- a/src/main/resources/templates/MessageInfo.html
+++ b/src/main/resources/templates/MessageInfo.html
@@ -1,75 +1,52 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>消息管理</title>
-<link href="CSS/EditGuard.css" rel="stylesheet" type="text/css" />
-<link href="CSS/PersonalInfo.css" rel="stylesheet" type="text/css" />
-<link rel="stylesheet" href="css/MessageInfo.css" type="text/css">
+
+  <link rel="stylesheet" th:href="@{/css/EditGuard.css}"/>
+  <link rel="stylesheet" th:href="@{/css/PersonalInfo.css}"/>
+  <link rel="stylesheet" th:href="@{/css/MessageInfo.css}"/>
+
 </head>
 
 <body>
-<div id="div-left"> <a class="backBtn" href="MessageInfo.html"><img width="35px" height="38px" src="IMAGES/delete.png"/></a> <a class="backBtn" href="MessageInfo-no.html"><img width="30px" height="36px" src="IMAGES/no-read.png"/></a> </div>
+<div id="div-left">
+  <a class="backBtn" href="MessageInfo.html">
+      <img width="35px" height="38px" src="/IMAGES/delete.png"/>
+  </a>
+  <a class="backBtn" href="MessageInfo-no.html">
+    <img width="30px" height="36px" src="/IMAGES/no-read.png"/>
+  </a>
+</div>
 <div id="div-right">
+
+
+  <!--/*@thymesVar id="notices" type="java.util.List"*/-->
+  <thymeleaf th:each="notice : ${notices}" th:if="${not #lists.isEmpty(notices)}" th:remove="tag">
   <div class="div-item">
     <div class="div-1">
-      <div class="ItemTitle"> 法拉利一号 </div>
+      <div class="ItemTitle" th:text="${notice.car.name}">  </div>
     </div>
     <div class="div-2">
       <div style="">
-        <div>状态：未设防</div>
-        <div>最近记录位置：浙江省杭州市江干区就包三餐西园1506号</div>
-        <div>法拉利一号 已停止充电 请关注！</div>
+        <div th:text="${notice.car.status} eq '已失效'?'已失效':((${notice.car.alertstatus} eq 'Y')?'已设防':'未设防')"></div>
+        <div th:text="${notice.car.latitude}+'------'+${notice.car.longitude}">最近记录位置</div>
+        <div th:text="${notice.content}"></div>
       </div>
     </div>
-    <div class="div-3"> 2016.09.25 14:52 </div>
-    <div class="div-4"> <span></span> <a><img src="images/battery-red.png" /></a> <a><img src="images/restart.png" /></a> <a><img src="images/delete.png" /></a></div>
+    <div class="div-3" th:text="${#calendars.format(notice.updatetime,'yyyy-MM-dd HH:mm:ss')}"> </div>
+    <div class="div-4">
+      <span></span>
+      <a><img src="/images/battery-red.png" /></a>
+      <a><img src="/images/restart.png" /></a>
+      <a><img src="/images/delete.png" /></a>
+    </div>
   </div>
-  
-    <div class="div-item">
-    <div class="div-1">
-      <div class="ItemTitle"> 法拉利一号 </div>
-    </div>
-    <div class="div-2">
-      <div style="">
-        <div>状态：未设防</div>
-        <div>最近记录位置：浙江省杭州市江干区就包三餐西园1506号</div>
-        <div>法拉利一号 已停止充电 请关注！</div>
-      </div>
-    </div>
-    <div class="div-3"> 2016.09.25 14:52 </div>
-    <div class="div-4"> <span></span> <a><img src="images/battery-red.png" /></a> <a><img src="images/restart.png" /></a> <a><img src="images/delete.png" /></a></div>
-  </div>
-  
-    <div class="div-item">
-    <div class="div-1">
-      <div class="ItemTitle"> 法拉利一号 </div>
-    </div>
-    <div class="div-2">
-      <div style="">
-        <div>状态：未设防</div>
-        <div>最近记录位置：浙江省杭州市江干区就包三餐西园1506号</div>
-        <div>法拉利一号 已停止充电 请关注！</div>
-      </div>
-    </div>
-    <div class="div-3"> 2016.09.25 14:52 </div>
-    <div class="div-4"> <span></span> <a><img src="images/battery-red.png" /></a> <a><img src="images/restart.png" /></a> <a><img src="images/delete.png" /></a></div>
-  </div>
-  
-    <div class="div-item">
-    <div class="div-1">
-      <div class="ItemTitle"> 法拉利一号 </div>
-    </div>
-    <div class="div-2">
-      <div style="">
-        <div>状态：未设防</div>
-        <div>最近记录位置：浙江省杭州市江干区就包三餐西园1506号111111111111111111111111111111111111111</div>
-        <div>法拉利一号 已停止充电 请关注！</div>
-      </div>
-    </div>
-    <div class="div-3"> 2016.09.25 14:52 </div>
-    <div class="div-4"> <span></span> <a><img src="images/battery-red.png" /></a> <a><img src="images/restart.png" /></a> <a><img src="images/delete.png" /></a></div>
-  </div>
+  </thymeleaf>
+
+
 </div>
 </body>
 </html>
