--- a/src/main/resources/templates/history.html
+++ b/src/main/resources/templates/history.html
@@ -26,10 +26,10 @@
 				 <div class="option">
 					 <label>选择车辆</label>
 					 <select id="mycar">
-						 <option value="1">法拉利1号</option>
-						 <option value="1">法拉利2号</option>
-						 <option value="1">法拉利3号</option>
-						 <option value="1">法拉利4号</option>
+						 <!--<option value="1">法拉利1号</option>-->
+						 <!--<option value="1">法拉利2号</option>-->
+						 <!--<option value="1">法拉利3号</option>-->
+						 <!--<option value="1">法拉利4号</option>-->
 					 </select>
 				 </div>
 				 <div class="option">
@@ -45,10 +45,10 @@
 				 <div class="survey clearfix">
 					 <div class="surveyTitle">轨迹概况</div>
 					 <div class="surveyInfo" id="guijigaikuang">
-						 <p>车辆：法拉利1号</p>
-						 <p>时间段：2016.08.23 19:30至2016.10.22 22:30</p>
-						 <p><span>最大速度：</span>35km<span>平均速度：</span>4km<span>总里程：15km</span></p>
-						 <p><span>行驶总时间：</span>4小时23分钟</p>
+						 <!--<p>车辆：法拉利1号</p>-->
+						 <!--<p>时间段：2016.08.23 19:30至2016.10.22 22:30</p>-->
+						 <!--<p><span>最大速度：</span>35km<span>平均速度：</span>4km<span>总里程：15km</span></p>-->
+						 <!--<p><span>行驶总时间：</span>4小时23分钟</p>-->
 					 </div>
 				 </div>
 				 <div class="survey clearfix">
