线上最新版本

--- a/src/main/resources/templates/main_sidebar.html
+++ b/src/main/resources/templates/main_sidebar.html
@@ -41,7 +41,7 @@
 
 				<th:themleaf th:if="${session.role=='superAdmin'}" th:remove="tag">
 					<li id="account_li" class="item"><a href="/backstage/account"><span class="datum"></span>账户管理</a></li>
-					<!--<li id="push_li" class="item"><a href="/backstage/push"><span class="news"></span>推送管理</a></li>-->
+					<li id="push_li" class="item"><a href="/backstage/push"><span class="news"></span>推送管理</a></li>
 				</th:themleaf>
 
 
