--- a/src/main/resources/templates/adminmanage.html
+++ b/src/main/resources/templates/adminmanage.html
@@ -66,7 +66,7 @@
         <br/><br/>
         <input type="type" placeholder="姓名" id="name"/>
         <br/><br/>
-        <input type="type" placeholder="密码" id="password"/>
+        <input type="password" placeholder="密码" id="password"/>
     </div>
     <div class="btnOpen">
         <button class="submit" id="add_submit">提交</button>
