--- a/src/main/resources/templates/memberManage.html
+++ b/src/main/resources/templates/memberManage.html
@@ -18,6 +18,7 @@
             <div class="manageBox manageL">
                 <a href="javascript:history.go(-1)"><div class="backOpen"></div></a>
                 <!--<a href="userEdite.html"><div class="addOpen"></div></a>-->
+                <div class="addOpen"  id="addAdmin_div" style="cursor: pointer"></div>
             </div>
             <div class="manageBox manageR">
                 <table class="table table-hover">
@@ -60,8 +61,103 @@
         </div>
     </div>
 </div>
+<div class="compiler" id="add_div">
+    <div class="compilerBox">
+        <input type="type" placeholder="登录名(英文)" id="loginname"/>
+        <br/><br/>
+        <input type="type" placeholder="姓名" id="name"/>
+        <br/><br/>
+        <input type="type" placeholder="电话" id="phone"/>
+        <br/><br/>
+        <input type="password" placeholder="密码" id="password"/>
+    </div>
+    <div class="btnOpen">
+        <button class="submit" id="add_submit">提交</button>
+        <button class="cansle" id="add_cansle">取消</button>
+    </div>
+</div>
 <script type="text/javascript">
     $("#account_li").addClass("active");
+    $("#addAdmin_div").on('click',function(){
+
+        $('#loginname').val('');
+        $('#name').val('');
+        $('#password').val('');
+
+        layer.open({
+            type: 1,
+            title:'添加账号',
+            skin: 'layui-layer-rim', //加上边框
+            area: ['300px', '350px'], //宽高
+            content: $("#add_div")
+        });
+    });
+    $("#add_cansle").on('click',function(){
+        layer.closeAll();
+    })
+    $("#add_submit").on('click',function(){
+        var ii = layer.load();
+
+        var loginname =$.trim($("#loginname").val());
+        var name =$.trim($("#name").val());
+        var phone =$.trim($("#phone").val());
+        var password =$.trim($("#password").val());
+
+        if(loginname==''){
+            layer.msg('登录账号不能为空', {
+                time: 1000 //1s后自动关闭
+
+            });
+            return;
+        }else if(name==''){
+            layer.msg('姓名不能为空', {
+                time: 1000 //1s后自动关闭
+
+            });
+            return;
+        }else if(phone==''){
+            layer.msg('电话不能为空', {
+                time: 1000 //1s后自动关闭
+
+            });
+            return;
+        }else if(password==''){
+            layer.msg('密码不能为空', {
+                time: 1000 //1s后自动关闭
+
+            });
+            return;
+        }
+
+
+        $.ajax({
+            type : 'POST',
+            url : '/backstage/addUser',
+            data : {
+                'username' :loginname,
+                'realname' :name,
+                'nickname' :name,
+                'telephone' :phone,
+                'password' : password
+
+            },
+            dataType : 'json',
+            success : function(data, textStatus) {
+                layer.close(ii);
+
+                var result = data.result;
+                if ("success" != result) { //
+                    layer.msg(data.msg, {
+                        time: 2000 //2s后自动关闭
+
+                    });
+                } else {
+                    window.location.reload();//刷新当前页面.
+                }
+            }
+        });
+
+    })
 </script>
 <script th:src="@{/js/system/membermanager.js}"></script>
 </body>
