线上最新版本  Linux服务器版本-  修复非法坐标和定位车辆位置功能

--- a/src/main/resources/templates/CarManage.html
+++ b/src/main/resources/templates/CarManage.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>天目-车辆设防管理</title>
+    <title>天目-车辆管理</title>
     <thymeleaf th:include="common :: css" th:remove="tag"/>
     <thymeleaf th:include="common :: js" th:remove="tag"/>
 </head>
