--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -19,59 +19,18 @@
 						<tbody>
 							<tr>
 								<td width="20%">
-								<h3 class="carName">关于我们1</h3>
+								<h3 class="carName">关于谦达祺</h3>
 							</td>
 							<td width="80%">
 								<div class="content">
-									<p>沿着荷塘，是一条曲折的小煤屑路。</p>
-									<p>这是一条幽僻的路；白天也少人走，夜晚更加寂寞。荷塘四面，长着许多树，蓊蓊郁郁的。路的一旁，是些杨柳，和一些不知道名字的树。没有月光的晚上，这路上阴森森的，有些怕人。今晚却很好，虽然月光也还是淡淡的。路上只我一个人，背着手踱着。这一片天地好像是我的；我也像超出了平常的自己，到了另一世界里。我爱热闹，也爱冷静；爱群居，也爱独处。像今晚上，一个人在这苍茫的月下，什么都可以想，什么都可以不想，便觉是个自由的人。白天里一定要做的事，一定要说的话，现在都可不理。这是独处的妙处，我且受用这无边的荷香月色好了。</p>
+									<p>浙江谦达祺科技有限公司是一家专业致力于智能化软硬件研发、设计、生产制造、销售的现代化企业，公司拥有专业优秀的开发设计团队，拥有丰富的软硬件开发经验，目前旗下产品有天目护航、智盾车卫士、租赁宝等，涵括车辆定位防盗、公共自行车管理行业，通过GPS硬件与APP相结合方式管理，技术达到同行领先标准。
+										公司主要分为行政部、市场部、技术部三大部门，其中技术部分为硬件开发组、软件系统开发组和移动终端开发组，研发人员均具有三年以上工作经历，积累丰富的开发经验。
+									</p>
+
 								</div>
 							</td>
 							</tr>
-							<tr>
-								<td width="20%">
-								<h3 class="carName">关于我们2</h3>
-							</td>
-							<td width="80%">
-								<div class="content">
-									<p>沿着荷塘，是一条曲折的小煤屑路。</p>
-									<p>这是一条幽僻的路；白天也少人走，夜晚更加寂寞。荷塘四面，长着许多树，蓊蓊郁郁的。路的一旁，是些杨柳，和一些不知道名字的树。没有月光的晚上，这路上阴森森的，有些怕人。今晚却很好，虽然月光也还是淡淡的。路上只我一个人，背着手踱着。这一片天地好像是我的；我也像超出了平常的自己，到了另一世界里。我爱热闹，也爱冷静；爱群居，也爱独处。像今晚上，一个人在这苍茫的月下，什么都可以想，什么都可以不想，便觉是个自由的人。白天里一定要做的事，一定要说的话，现在都可不理。这是独处的妙处，我且受用这无边的荷香月色好了。</p>
-								</div>
-							</td>
-							</tr>
-							<tr>
-								<td width="20%">
-								<h3 class="carName">关于我们3</h3>
-							</td>
-							<td width="80%">
-								<div class="content">
-									<p>沿着荷塘，是一条曲折的小煤屑路。</p>
-									<p>这是一条幽僻的路；白天也少人走，夜晚更加寂寞。荷塘四面，长着许多树，蓊蓊郁郁的。路的一旁，是些杨柳，和一些不知道名字的树。没有月光的晚上，这路上阴森森的，有些怕人。今晚却很好，虽然月光也还是淡淡的。路上只我一个人，背着手踱着。这一片天地好像是我的；我也像超出了平常的自己，到了另一世界里。我爱热闹，也爱冷静；爱群居，也爱独处。像今晚上，一个人在这苍茫的月下，什么都可以想，什么都可以不想，便觉是个自由的人。白天里一定要做的事，一定要说的话，现在都可不理。这是独处的妙处，我且受用这无边的荷香月色好了。</p>
-								</div>
-							</td>
-							</tr>
-							<tr>
-								<td width="20%">
-								<h3 class="carName">关于我们4</h3>
-							</td>
-							<td width="80%">
-								<div class="content">
-									<p>沿着荷塘，是一条曲折的小煤屑路。</p>
-									<p>这是一条幽僻的路；白天也少人走，夜晚更加寂寞。荷塘四面，长着许多树，蓊蓊郁郁的。路的一旁，是些杨柳，和一些不知道名字的树。没有月光的晚上，这路上阴森森的，有些怕人。今晚却很好，虽然月光也还是淡淡的。路上只我一个人，背着手踱着。这一片天地好像是我的；我也像超出了平常的自己，到了另一世界里。我爱热闹，也爱冷静；爱群居，也爱独处。像今晚上，一个人在这苍茫的月下，什么都可以想，什么都可以不想，便觉是个自由的人。白天里一定要做的事，一定要说的话，现在都可不理。这是独处的妙处，我且受用这无边的荷香月色好了。</p>
-								</div>
-							</td>
-							</tr>
-							<tr>
-								<td width="20%">
-								<h3 class="carName">关于我们5</h3>
-							</td>
-							<td width="80%">
-								<div class="content">
-									<p>沿着荷塘，是一条曲折的小煤屑路。</p>
-									<p>这是一条幽僻的路；白天也少人走，夜晚更加寂寞。荷塘四面，长着许多树，蓊蓊郁郁的。路的一旁，是些杨柳，和一些不知道名字的树。没有月光的晚上，这路上阴森森的，有些怕人。今晚却很好，虽然月光也还是淡淡的。路上只我一个人，背着手踱着。这一片天地好像是我的；我也像超出了平常的自己，到了另一世界里。我爱热闹，也爱冷静；爱群居，也爱独处。像今晚上，一个人在这苍茫的月下，什么都可以想，什么都可以不想，便觉是个自由的人。白天里一定要做的事，一定要说的话，现在都可不理。这是独处的妙处，我且受用这无边的荷香月色好了。</p>
-								</div>
-							</td>
-							</tr>
+
 						</tbody>
 					</table>
 				</div>
