线上最新版本  Linux服务器版本-  修复分页问题

--- a/src/main/resources/templates/CarManage.html
+++ b/src/main/resources/templates/CarManage.html
@@ -38,14 +38,15 @@
                 <div class="page">
                     <div class="pageList">
                         <nav>
-                            <ul class="pagination" id="pagination">
-                                <li><a href="#">首页</a></li>
-                                <li><a href="#">上一页</a></li>
-                                <li><a href="#">1</a></li>
+                            <div id="pagination" class="pagination"><!-- 这里显示分页 --></div>
+                            <!--<ul class="pagination" id="pagination">-->
+                                <!--<li><a href="#">首页</a></li>-->
+                                <!--<li><a href="#">上一页</a></li>-->
+                                <!--<li><a href="#">1</a></li>-->
 
-                                <li><a href="#">下一页</a></li>
-                                <li><a href="#">尾页</a></li>
-                            </ul>
+                                <!--<li><a href="#">下一页</a></li>-->
+                                <!--<li><a href="#">尾页</a></li>-->
+                            <!--</ul>-->
                         </nav>
                     </div>
                 </div>
@@ -85,7 +86,7 @@
     });
     $("#add_cansle").on('click',function(){
         layer.closeAll();
-    })
+    });
 
     $("#add_submit").on('click',function(){
         var ii = layer.load();
