--- a/src/main/resources/templates/guard.html
+++ b/src/main/resources/templates/guard.html
@@ -66,12 +66,7 @@
                 <div class="page">
                     <div class="pageList">
                         <nav>
-                            <ul class="pagination" id="pagination">
-                                <li><a href="#">共-页</a></li>
-                                <li><a href="#">上一页</a></li>
-                                <li><a href="#">0</a></li>
-                                <li><a href="#">下一页</a></li>
-                            </ul>
+                            <div id="pagination" class="pagination"><!-- 这里显示分页 --></div>
                         </nav>
                     </div>
                 </div>
