--- a/src/main/resources/templates/news.html
+++ b/src/main/resources/templates/news.html
@@ -107,17 +107,7 @@
 						<div class="page">
 							<div class="pageList">
 								<nav>
-									<ul class="pagination" id="pagination">
-										<li><a href="#">首页</a></li>
-										<li><a href="#">上一页</a></li>
-										<li><a href="#">1</a></li>
-										<li><a href="#">2</a></li>
-										<li><a href="#">3</a></li>
-										<li><a href="#">4</a></li>
-										<li><a href="#">5</a></li>
-										<li><a href="#">下一页</a></li>
-										<li><a href="#">尾页</a></li>
-									</ul>
+									<div id="pagination" class="pagination"><!-- 这里显示分页 --></div>
 								</nav>
 							</div>
 						</div>
