--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -8,6 +8,8 @@
 	<script type="text/javascript" th:src="@{/js/common.js}" ></script>
 
 	<script type="text/javascript" th:src="@{/js/layer/layer.js}"></script>
+
+	<script type="text/javascript" th:src="@{/js/jquery.pagination.js}"></script>
 </thymeleaf>
 
 
@@ -28,6 +30,7 @@
 
 	<link rel="stylesheet" th:href="@{/css/public.css}" />
 	<link rel="stylesheet" th:href="@{/css/index.css}" />
+	<link rel="stylesheet" th:href="@{/css/pagination.css}" />
 
 
 </thymeleaf>
